# asm_rs_bench

./: .gitignore  Cargo.toml  README.md  benchmark.c
cpp/: benchmark.cpp  isolate.cpp  quantization_check.cpp
src/: gemm.rs  gemm_old.rs  gemv.rs  minimal_q8.rs  quantization.rs
