[package]
name = "asm_rs_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2.4.1"
rand = "0.8.5"
rayon = "1.10.0"
wide = "0.7.28"
blas = "0.22"
blas-src = { version = "0.10", features = ["blis"] }
blis-src = "0.2.2"
blas-sys = "0.7.1"

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "gemv"
path = "src/gemv.rs"

[[bin]]
name = "gemm"
path = "src/gemm.rs"

[[bin]]
name = "gemm_old"
path = "src/gemm_old.rs"


[[bin]]
name = "minimal_q8"
path = "src/minimal_q8.rs"
